--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Tunqui</title>
 
-  <link rel="icon" href="./favicon.svg">
-  <link rel="apple-touch-icon" href="./favicon.svg">
+  <link rel="icon" href="./assets/image/favicon.svg">
+  <link rel="apple-touch-icon" href="./assets/image/favicon.svg">
 
   <link rel="stylesheet" href="./styles.css">
 </head>
@@ -14,7 +14,7 @@
   <main>
     <article class="card">
       <figure class="card__photo">
-        <img src="./tunqui.webp" alt="Rupicola peruvianus perched on a branch" class="card__img" title="Tunqui">
+        <img src="./assets/image/tunqui.webp" alt="Rupicola peruvianus perched on a branch" class="card__img" title="Tunqui">
       </figure>
       <div class="card__info">
         <h1 class="card__title"><a href="https://es.wikipedia.org/wiki/Rupicola_peruvianus" target="_blank" rel="noreferrer" class="card__link">Rupicola Peruvianus</a></h1>
@@ -24,7 +24,7 @@
     </article>
   </main>
   <footer class="attr">
-    <small>Frontend Career Path by <a href="https://scrimba.com/learn/frontend" class="attr__link" target="_blank" rel="noreferrer">Scrimba</a> - Coded by <a href="3" class="attr__link" target="_blank" rel="noreferrer">VIMP</a> 💜</small>
+    <small>Frontend Career Path by <a href="https://scrimba.com/learn/frontend" class="attr__link" target="_blank" rel="noreferrer">Scrimba</a> - Coded by <a href="https://github.com/mendez-v/business-card" class="attr__link" target="_blank" rel="noreferrer">VIMP</a> 💜</small>
   </footer>
 </body>
 </html>
