--- a/index.html
+++ b/index.html
@@ -3,7 +3,22 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Tunqui</title>
+
+  <title>Business Card - Tunqui</title>
+  <meta name="description" content="This is a solution to one of the projects that are part of the `Frontend Career Path - Module 2` by Scrimba.">
+
+  <meta property="og:url" content="https://mendez-v.github.io/business-card/">
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="Business Card - Tunqui">
+  <meta property="og:description" content="This is a solution to one of the projects that are part of the Frontend Career Path - Module 2 by Scrimba.">
+  <meta property="og:image" content="https://raw.githubusercontent.com/mendez-v/business-card/main/assets/image/thumbnail.png">
+
+  <meta name="twitter:card" content="summary_large_image">
+  <meta property="twitter:domain" content="mendez-v.github.io">
+  <meta property="twitter:url" content="https://mendez-v.github.io/business-card/">
+  <meta name="twitter:title" content="Business Card - Tunqui">
+  <meta name="twitter:description" content="This is a solution to one of the projects that are part of the Frontend Career Path - Module 2 by Scrimba.">
+  <meta name="twitter:image" content="https://raw.githubusercontent.com/mendez-v/business-card/main/assets/image/thumbnail.png">
 
   <link rel="icon" href="./assets/image/favicon.svg">
   <link rel="apple-touch-icon" href="./assets/image/favicon.svg">
